Adapt paper to match published version

--- a/paper/AB-tDCS.bib
+++ b/paper/AB-tDCS.bib
@@ -1,3 +1,9 @@
+@article{Schmidt2016,
+  title={Shall we really do it again? The powerful concept of replication is neglected in the social sciences.},
+  author={Schmidt, Stefan},
+  year={2016},
+  publisher={American Psychological Association}
+}
 @article{Bakeman2005,
 abstract = {Investigators, who are increasingly implored to present and discuss effect size statistics, might comply more often if they understood more clearly what is required. When investigators wish to report effect sizes derived from analyses of variance that include repeated measures, past advice has been problematic. Only recently has a generally useful effect size statistic been proposed for such designs: generalized eta squared (eta2G; Olejnik {\&} Algina, 2003). Here, we present this method, explain that eta2G preferred to eta squared and partial eta squared because it provides comparability across between-subjects and within-subjects designs, show that it can easily be computed from information provided by standard statistical packages, and recommend that investigators provide it routinely in their research reports when appropriate.},
 author = {Bakeman, Roger},
