--- a/paper/AB-tDCS_paper.Rmd
+++ b/paper/AB-tDCS_paper.Rmd
@@ -32,7 +32,7 @@ authornote: |
   Leon Reteig is now at the Division of Laboratories, Pharmacy and Biomedical Genetics, University Medical Center Utrecht.
 note: "Preprint submitted for peer-review."
 abstract: |
-  The attentional blink (AB) phenomenon reveals a bottleneck of human information processing: the second of two targets is often missed when they are presented in rapid succession among distractors. A recent study by London & Slagter (_Journal of Cognitive Neuroscience_, _33_, 756--68, 2021) showed that the size of the AB can be changed by applying transcranial direct current stimulation (tDCS) over the left dorsolateral prefrontal cortex (lDLPFC). Although AB size at the group level remained unchanged, the effects of anodal and cathodal tDCS were negatively correlated: if a given individual's AB size decreased from baseline during anodal tDCS, their AB size would increase during cathodal tDCS, and vice versa. Here, we attempted to replicate this finding. Like London & Slagter, we found no group effects of tDCS, but also no longer found a significant negative correlation. We present a series of statistical measures of replication success, all of which confirm that both studies are not in agreement. First, the correlation here is significantly smaller than a conservative estimate of the original correlation. Second, the difference between the correlations is greater than expected due to sampling error, and our data are more consistent with a zero-effect than with the original estimate. Finally, the overall effect when combining both studies is small and not significant. Our findings thus indicate that the effects of lDPLFC-tDCS on the AB are less substantial than observed by London & Slagter (2021). Although this should be quite a common scenario, null findings can be difficult to interpret and are still under-represented in the brain stimulation and cognitive neuroscience literatures. An important auxiliary goal of this paper is therefore to provide a tutorial for other researchers, to maximize the evidential value from null findings.
+  The attentional blink (AB) phenomenon reveals a bottleneck of human information processing: the second of two targets is often missed when they are presented in rapid succession among distractors. In our previous work, we showed that the size of the AB can be changed by applying transcranial direct current stimulation (tDCS) over the left dorsolateral prefrontal cortex (lDLPFC) (_Journal of Cognitive Neuroscience_, _33_, 756--68, 2021). Although AB size at the group level remained unchanged, the effects of anodal and cathodal tDCS were negatively correlated: if a given individual's AB size decreased from baseline during anodal tDCS, their AB size would increase during cathodal tDCS, and vice versa. Here, we attempted to replicate this finding. We found no group effects of tDCS, like the original study, but we no longer found a significant negative correlation. We present a series of statistical measures of replication success, all of which confirm that both studies are not in agreement. First, the correlation here is significantly smaller than a conservative estimate of the original correlation. Second, the difference between the correlations is greater than expected due to sampling error, and our data are more consistent with a zero-effect than with the original estimate. Finally, the overall effect when combining both studies is small and not significant. Our findings thus indicate that the effects of lDPLFC-tDCS on the AB are less substantial than observed in our initial study. Although this should be quite a common scenario, null findings can be difficult to interpret and are still under-represented in the brain stimulation and cognitive neuroscience literatures. An important auxiliary goal of this paper is therefore to provide a tutorial for other researchers, to maximize the evidential value from null findings.
 keywords          : "attentional blink, tDCS, dlPFC, individual differences, replication"
 wordcount         : "8076"
 bibliography      : ["AB-tDCS.bib", "r-references.bib"]
@@ -50,13 +50,14 @@ always_allow_html : yes
 header-includes   :
   - \raggedbottom
 output:
-  papaja::apa6_pdf: default
+  bookdown::word_document2: default
   bookdown::html_document2:
     toc: true
     toc_float: true
     code_folding: hide
     highlight: pygments
     theme: paper
+  papaja::apa6_pdf: default
   papaja::apa6_word: default
 ---
 
@@ -134,17 +135,17 @@ While the AB might seem to be a fundamental bottleneck, it can under some circum
 
 Transcranial direct current stimulation (tDCS) is another brain stimulation technique that has gained traction in the past two decades. In tDCS, an electrical current flows between an anodal and cathodal electrode, which can affect the excitability of the underlying cortex [@Gebodh2019a]. Anodal stimulation generally enhances cortical excitability, while cathodal stimulation may have an inhibitory effect [@Nitsche2000; @Nitsche2001] (though note that this does not hold in all cases [@Parkin2018], and the underlying physiology is complex [@Bikson2019; @Liu2018; @Stagg2018]).
 
-@London2021 recently examined the effects of tDCS on the AB. They applied anodal and cathodal tDCS over the left dorsolateral prefontal cortex (lDPLFC, with the other electrode on the right forehead)---one of the core brain areas implicated in the AB [@Slagter2010; @Hommel2006]. At the group level, tDCS did not appear to have any effects on AB size. However, anodal and cathodal tDCS did appear to systematically affect the AB within individuals, as their effects were negatively correlated. For a given individual, this negative correlation implies that when AB size decreased (compared to a baseline measurement) during anodal tDCS, AB size would increase during cathodal tDCS (or vice versa).
+A previous study by our group [@London2021] recently examined the effects of tDCS on the AB. In this study, anodal and cathodal tDCS were applied over the left dorsolateral prefontal cortex (lDPLFC, with the other electrode on the right forehead)---one of the core brain areas implicated in the AB [@Slagter2010; @Hommel2006]. At the group level, tDCS did not appear to have any effects on AB size. However, anodal and cathodal tDCS did appear to systematically affect the AB within individuals, as their effects were negatively correlated. For a given individual, this negative correlation implies that when AB size decreased (compared to a baseline measurement) during anodal tDCS, AB size would increase during cathodal tDCS (or vice versa).
 
-London and Slagter's [-@London2021] findings complement earlier literature showing large individual differences in both the AB [@Willems2016] and effects of tDCS [@Krause2014]. However, only one other tDCS study of the AB exists to date, which in fact did find a group-level effect of stimulation, in contrast to @London2021 (@Sdoia2019). Also, the negative correlation between the effects of anodal and cathodal tDCS has so far only been reported in @London2021, and was based on an exploratory analysis. We thus decided to conduct another study aiming to replicate this finding.  
+Our previous [-@London2021] findings complement earlier literature showing large individual differences in both the AB [@Willems2016] and effects of tDCS [@Krause2014]. However, only one other tDCS study of the AB exists to date, which in fact did find a group-level effect of stimulation, in contrast to @London2021 (@Sdoia2019). Also, the negative correlation between the effects of anodal and cathodal tDCS has so far only been reported in @London2021, and was based on an exploratory analysis. We thus decided to conduct another study aiming to replicate this finding. Replication of findings in general is important to establish credibility of scientific claims [@Schmidt2016], and in this specific case, reproduction of our original findings would be informative about the ability of tDCS to modulate the apparent bottleneck in information processing captured by the AB, and about the importance of left dorsolateral prefrontal cortex in the AB and attentional filtering more generally. Thus, we aimed to confirm our previous results and conclusions.
 
 To foreshadow our results, like @London2021, we did not find a group effect of tDCS on the AB. However, the correlation between the effects of anodal and cathodal tDCS was also not significant. Although this indicates that the two studies may differ, a failure to reject the null hypothesis by itself does not tell us much [@Harms2018]: it is crucial to also take measures of the uncertainty and effect size in both studies into account [@Simonsohn2015]. That said, there is no consensus on when a replication can be considered successful or not [@Brandt2014], let alone a single statistical test to definitely answer this question conclusively [@Anderson2016]. 
 
-Therefore, we employ a number of statistical methods to maximize the evidential value in these two studies. We ask three questions (cf. @Zondervan-Zwijnenburg2020) that all aim to evaluate to what extent the present study is a successful replication of @London2021 [@Zwaan2018; cf. @Camerer2018; @OSC2015]. First, while the effect in our study was not significant, there might still be a meaningful effect that is simply smaller than anticipated. Therefore, we used equivalence testing [@Lakens2018] to answer the question "_is the correlation in study 2 significantly small?_". Second, although our result differs from @London2021, it could still be more consistent with their findings than with alternative explanations. So in addition, we asked "_is the correlation in study 2 different from study 1?_", and aimed to answer this question using prediction intervals [@Spence2016; @Patil2016] and replication Bayes factors [@Wagenmakers2016; @Verhagen2014]. Finally, it could be that the effect in our study alone is not sufficiently large, but the overall effect based on both studies is. This raises the question "_is the effect significant when combining study 1 and 2?_", which we addressed through meta-analysis [@Quintana2015;@Goh2016] and by pooling the data.
+Therefore, we employ a number of statistical methods to maximize the evidential value in these two studies. We ask three questions (cf. @Zondervan-Zwijnenburg2020) that all aim to evaluate to what extent the present study is a successful replication [@Zwaan2018; cf. @Camerer2018; @OSC2015] of our previous work [@London2021]. First, while the effect in our study was not significant, there might still be a meaningful effect that is simply smaller than anticipated. Therefore, we used equivalence testing [@Lakens2018] to answer the question "_is the correlation in study 2 significantly small?_". Second, although our current result differs from @London2021, it could still be more consistent with our previous findings than with alternative explanations. So in addition, we asked "_is the correlation in study 2 different from study 1?_", and aimed to answer this question using prediction intervals [@Spence2016; @Patil2016] and replication Bayes factors [@Wagenmakers2016; @Verhagen2014]. Finally, it could be that the effect in our study alone is not sufficiently large, but the overall effect based on both studies is. This raises the question "_is the effect significant when combining study 1 and 2?_", which we addressed through meta-analysis [@Quintana2015;@Goh2016] and by pooling the data.
 
 These questions address issues of reproducibility that are currently faced by many in the brain stimulation field [@Heroux2017], and in the cognitive neuroscience community at large [@Munafo2017; @Huber2019]. Therefore, aside from our focus on tDCS and the AB, an important auxiliary goal of this article is to provide a tutorial on the statistical evaluation of replication studies (also see @Lakens2020, @Zondervan-Zwijnenburg2020). We hope this may prove useful to other researchers who find themselves in similar situations.[^noEEG]
 
-[^noEEG]: We also aimed to examine the neurophysiological mechanisms underlying the individual differences in response to tDCS using EEG [@Krause2014; @Li2015b; @Harty2017]. However, since we did not replicate the behavioral effect of tDCS on the AB of London and Slagter (2021), we were unable to fulfill this aim. 
+[^noEEG]: We also aimed to examine the neurophysiological mechanisms underlying the individual differences in response to tDCS using EEG [@Krause2014; @Li2015b; @Harty2017]. However, since we did not replicate the behavioral effect of tDCS on the AB as in our original study [@London2021], we were unable to fulfill this aim. 
 
 # Methods
 
@@ -196,9 +197,9 @@ Within each block of the task, participants took a self-timed break every 50 tri
 
 ## Task
 
-The attentional blink task (Figure \@ref(fig:fig-task)) was almost identical to the one used in @London2021 and @Slagter2013, which in turn was based on a task designed by @Dux2008. A rapid serial visual presentation stream of 15 letters (cf. 17 letters in @London2021) was shown on each trial, using Presentation software (Neurobehavioral Systems, Inc.). Each letter was displayed for 91.7 ms (11 frames at 120 Hz) on a dark gray background. The letters were presented in font size 40 (font: Courier New) at a viewing distance of 90 cm. On each trial, the letters were randomly sampled without replacement from the alphabet, excluding the letters I, L, O, Q, U and V, as they were too similar to each other. All distractor letters were mid-gray, whereas T1 and T2 were colored. T1 was red and always appeared at position 5 in the stream. T2 was green and followed T1 after either 2 distractors (_lag 3_) or 7 distractors (_lag 8_) (cf. lags 2, 4 and 10 in @London2021).
+The attentional blink task (Figure \@ref(fig:fig-task)) was almost identical to the one we used previously [@London2021;@Slagter2013] (see Table \@ref(tab:tab-diffs) for a full list of the differences), which in turn was based on an earlier task by @Dux2008. A rapid serial visual presentation stream of 15 letters was shown on each trial, using Presentation software (Neurobehavioral Systems, Inc.). Each letter was displayed for 91.7 ms (11 frames at 120 Hz) on a dark gray background. The letters were presented in font size 40 (font: Courier New) at a viewing distance of 90 cm. On each trial, the letters were randomly sampled without replacement from the alphabet, excluding the letters I, L, O, Q, U and V, as they were too similar to each other. All distractor letters were mid-gray, whereas T1 and T2 were colored. T1 was red and always appeared at position 5 in the stream. T2 was green and followed T1 after either 2 distractors (_lag 3_) or 7 distractors (_lag 8_) (cf. lags 2, 4 and 10 in @London2021).
 
-The letter stream was preceded by a fixation cross (same color as the letters) presented for 1750 ms (cf. 480 ms in @London2021) and followed by another fixation cross (cf. none in @London2021). Finally, the participant was prompted to type in (using a standard keyboard) the letter they thought was presented as T1 ("Which letter was red?"), followed by T2 ("Which letter was green?").
+The letter stream was preceded by a fixation cross (same color as the letters) presented for 1750 ms and followed by another fixation cross. Finally, the participant was prompted to type in (using a standard keyboard) the letter they thought was presented as T1 ("Which letter was red?"), followed by T2 ("Which letter was green?").
 
 ```{r trial counts}
 trials_study2 <- df_study2 %>%
@@ -288,7 +289,7 @@ We used the replication Bayes factor test for correlations developed by @Wagenma
 
 #### Meta-analysis {#meta}
 
-The outcomes from multiple studies on the same phenomenon can be combined through meta-analysis. Here we compute a meta-analytic estimate of the correlation based on the correlations observed here and as reported by @London2021, using the *metafor* package [Version `r packageDescription("metafor", fields = "Version", drop = TRUE)`; @R-metafor]. We weighed the estimate by sample size, so the present study will have a slightly higher influence on the meta-analytic effect size (because its sample size exceeds @London2021). We specified the meta-analysis as a fixed-effects model, because both studies are highly similar and from the same population (e.g., the experiments were conducted in the same location, and the sample was from the same university student population). With a fixed-effects analysis, we estimate the size of the effect _in the set of available studies_, meaning our inferences cannot generalize beyond. A random-effects meta-analysis would be appropriate in case the studies were more dissimilar, and if we sought an estimate of _the true effect in the population_, but we would need more than just two studies for this approach. Note that while meta-analyses are a powerful way to assess the overall effect in a series of studies, they are particularly vulnerable to false positives when there is publication bias [@Muradchanian2020], or if the selection of studies (or any single study) is biased [@Ueno2016].
+The outcomes from multiple studies on the same phenomenon can be combined through meta-analysis. Here we compute a meta-analytic estimate of the correlation based on the correlations observed here and as reported by @London2021, using the *metafor* package [Version `r packageDescription("metafor", fields = "Version", drop = TRUE)`; @R-metafor]. We weighed the estimate by sample size, as larger studies allow for more precise effect size estimates, and thus should also contribute more to the overall meta-analytic estimate. In our case, this means the present study will have a slightly higher influence on the meta-analytic effect size (because its sample size exceeds @London2021). We specified the meta-analysis as a fixed-effects model, because both studies are highly similar and from the same population (e.g., the experiments were conducted in the same location, and the sample was from the same university student population). With a fixed-effects analysis, we estimate the size of the effect _in the set of available studies_, meaning our inferences cannot generalize beyond. A random-effects meta-analysis would be appropriate in case the studies were more dissimilar, and if we sought an estimate of _the true effect in the population_, but we would need more than just two studies for this approach. When more studies are available, and it is not immediately clear whether fixed- or random-effects meta-analysis is more appropriate, it is advisable to report both [@Goh2016]. Note that while meta-analyses are a powerful way to assess the overall effect in a series of studies, they are particularly vulnerable to false positives when there is publication bias [@Muradchanian2020], or if the selection of studies (or any single study) is biased [@Ueno2016].
 
 #### Pooling the data with @London2021 {#pool}
 
@@ -577,7 +578,7 @@ res_z
 
 The meta-analytic estimate of the correlation is _r_ = `r printnum(res_r$pred)`, 95%CI[`r printnum(res_r$ci.lb)`, `r printnum(res_r$ci.ub)`], _p_ = `r printp(res_z$pval)` (Figure \@ref(fig:fig-rep-estimate)). So, when combining the correlation from @London2021 and the correlation observed here, the overall effect is no longer significant.
 
-In addition, we pooled the data from both studies at the single-subject level and re-calculated the partial correlation on the combined sample (n = `r n_study1 + n_study2`). To make the datasets as comparable as possible, we first averaged over T2|T1 accuracy at lags 2 and 4 in @London2021, to mimic a "lag 3" condition cf. the present study (Figure \@ref(fig:fig-corr-pooled)).
+In addition, we pooled the data from both studies at the single-subject level and re-calculated the partial correlation on the combined sample (n = `r n_study1 + n_study2`). To make the datasets as comparable as possible, we first averaged over T2|T1 accuracy at lags 2 and 4 in @London2021, to mimic a "lag 3" condition cf. the present study (Figure \@ref(fig:fig-corr-pooled)). The resulting T2|T1 accuracies at lag 3 are very comparable across the two studies (study 1: _M_=0.65, SD=0.26; study 2: _M_=0.64, SD=0.24)
 
 ```{r Function to create lag 3 in study 1 data}
 
@@ -698,29 +699,29 @@ ggplot(rep_plot_df, aes(estimate,analysis)) +
         plot.margin = unit(c(1,3,1,.25), "lines"))
 ```
 
-(ref:caption-fig-rep-estimate) __Summary of all the replication analyses__ (with exception of the replication Bayes Factor). The first two rows show the partial correlation (attemtping to adjust for Session order) between the AB magnitude change scores (tDCS - baseline) in the anodal and cathodal sessions, for @London2021 and the present study. The first is significantly negative, the second is slightly positive and not significant, because its 95% confidence interval (CI) overlaps with zero. The third row shows the 90% CI around the correlation in the present study. Because this interval does not overlap with the "small telescopes" effect size, (indicated by the `x`: $-r_{33\%}$ = `r printnum(-SESOI_small_telescopes$r, gt1=F)`), this correlation is significantly smaller. The fourth row shows the  95% prediction interval (PI) around the correlation in @London2021. Because this interval does not overlap with the correlation in the present study, both correlations are not consistent. The final two rows show the overall effect when the two correlations are meta-analyzed, and when one correlation is computed over the pooled data from both studies. Neither are significant (95% CI overlaps with zero). Thus, our replication analyses all suggest that we failed to replicate London & Slagter [-@London2021], and when the results are examined in combination, no evidence in support of a negative relationship between the AB magnitude change scores (_tDCS - baseline_) in the anodal and cathodal sessions is obtained.
+(ref:caption-fig-rep-estimate) __Summary of all the replication analyses__ (with exception of the replication Bayes Factor). The first two rows show the partial correlation (attemtping to adjust for Session order) between the AB magnitude change scores (tDCS - baseline) in the anodal and cathodal sessions, for study 1 [@London2021] (in yellow) and the present study (in blue). The first is significantly negative, the second is slightly positive and not significant, because its 95% confidence interval (CI) overlaps with zero. The third row shows the 90% CI around the correlation in the present study. Because this interval does not overlap with the "small telescopes" effect size, (indicated by the `x`: $-r_{33\%}$ = `r printnum(-SESOI_small_telescopes$r, gt1=F)`), this correlation is significantly smaller. The fourth row shows the  95% prediction interval (PI) around the correlation in @London2021. Because this interval does not overlap with the correlation in the present study, both correlations are not consistent. The final two rows show the overall effect when the two correlations are meta-analyzed, and when one correlation is computed over the pooled data from both studies. Neither are significant (95% CI overlaps with zero). Thus, our replication analyses all suggest that we failed to replicate London & Slagter [-@London2021], and when the results are examined in combination, no evidence in support of a negative relationship between the AB magnitude change scores (_tDCS - baseline_) in the anodal and cathodal sessions is obtained.
 
 In sum, all the analyses we conducted seem to support the same conclusion: that the current study is not a successful replication of @London2021, and that therefore the purported opposing effect of anodal and cathodal tDCS on the attentional blink within individuals is called into question.
 
 # Discussion
 
-@London2021 were the first to uncover potential individual differences in the effect of tDCS on the AB. They found a negative correlation between the effects of anodal and cathodal tDCS on T2|T1 accuracy across individuals individuals (in the absence of a group-level effect of tDCS). This analysis suggested an interesting pattern of individual differences in response to tDCS: those that tended to benefit from anodal tDCS (i.e., whose AB became smaller compared to baseline) would tend to worsen during cathodal tDCS, and vice versa. This finding seemed plausible given the substantial and well-documented individual differences in both the AB [@Willems2016] and the effects of tDCS [@Krause2014].
+Our recent study [@London2021] was the first to uncover potential individual differences in the effect of tDCS on the AB. This original study revealed a negative correlation between the effects of anodal and cathodal tDCS on T2|T1 accuracy across individuals individuals (in the absence of a group-level effect of tDCS). This analysis suggested an interesting pattern of individual differences in response to tDCS: those that tended to benefit from anodal tDCS (i.e., whose AB became smaller compared to baseline) would tend to worsen during cathodal tDCS, and vice versa. This finding seemed plausible given the substantial and well-documented individual differences in both the AB [@Willems2016] and the effects of tDCS [@Krause2014].
 
-We conducted a replication study, and again found no effect of tDCS at the group level. However, in contrast to @London2021, the correlation between the AB magnitude change scores (tDCS - baseline) in the anodal and cathodal sessions here is not significant, and not in the same direction. We therefore also computed several statistical measures of replication success focused on the negative correlation between anodal and cathodal tDCS. As discussed in more detail below, the field of electrical brain stimulation is characterized by inconsistent findings across studies. It is hence important that researchers in this field also start to incorporate methods that permit quantification of replication success. It is our hope that the overview of main, complementary analyses that researchers can use to maximize the evidential value from negative findings, provided here, will serve as a guideline for future studies.
+We conducted a replication study, and again found no effect of tDCS at the group level. However, in contrast to our prior work [@London2021], the correlation between the AB magnitude change scores (tDCS - baseline) in the anodal and cathodal sessions here is not significant, and not in the same direction. We therefore also computed several statistical measures of replication success focused on the negative correlation between anodal and cathodal tDCS. As discussed in more detail below, the field of electrical brain stimulation is characterized by inconsistent findings across studies. It is hence important that researchers in this field also start to incorporate methods that permit quantification of replication success. It is our hope that the overview of main, complementary analyses that researchers can use to maximize the evidential value from negative findings, provided here, will serve as a guideline for future studies.
 
-The measures of replication success showed that in our study the observed correlation is smaller than in @London2021, and than the smallest correlation they could have reasonably detected (i.e., an equivalence test for the lower bound of $r_{33\%}$ [@Simonsohn2015] was significant). The difference between the two studies is greater than expected based on sampling error alone (i.e., the correlation in the present study falls outside of the 95% prediction interval). Further, the data provide moderate to strong evidence for the null hypothesis of zero correlation compared to the alternative that the correlation is as in @London2021 (i.e., we found a replication Bayes factor in favor of the null hypothesis of ~10). Finally, combining both studies yields a smaller and non-significant correlation (both in a meta-analysis and by pooling the data).
+The measures of replication success showed that in our study the observed correlation is smaller than we found previously in @London2021, and than the smallest correlation they could have reasonably detected (i.e., an equivalence test for the lower bound of $r_{33\%}$ [@Simonsohn2015] was significant). The difference between the two studies is greater than expected based on sampling error alone (i.e., the correlation in the present study falls outside of the 95% prediction interval). Further, the data provide moderate to strong evidence for the null hypothesis of zero correlation compared to the alternative that the correlation is as in the original study [@London2021] (i.e., we found a replication Bayes factor in favor of the null hypothesis of ~10). Finally, combining both studies yields a smaller and non-significant correlation (both in a meta-analysis and by pooling the data).
 
-The overall picture is consistent: all measures indicate that the present study is not a successful replication of @London2021. But because both studies were similar in design and sample size, it is not warranted to dismiss the findings of @London2021. Our analysis revealed substantial variation between both estimates of the effect, and so the conclusion whether tDCS is effective should not be based on any single study, nor on only a single replication study [@Hedges2019]. In any series of studies, one should expect to sometimes not find a significant result, purely due to random variation---even if there is a true effect [@Amrhein2019].
+The overall picture is consistent: all measures indicate that the present study is not a successful replication of our original study [@London2021]. But because both studies were similar in design and sample size, it is not warranted to dismiss the previous findings. Our analysis revealed substantial variation between both estimates of the effect, and so the conclusion whether tDCS is effective should not be based on any single study, nor on only a single replication study [@Hedges2019]. In any series of studies, one should expect to sometimes not find a significant result, purely due to random variation---even if there is a true effect [@Amrhein2019].
 
-Still, the marked difference in results of both studies is surprising: they are similar enough that the present study could be considered a direct replication of @London2021 [@Zwaan2018]. We used the exact same electrode montage and tDCS parameters, followed the same experimental design (Figure \@ref(fig:fig-procedure)), ran the experiment in the same location with the same participant population, and used a virtually identical task. Nevertheless, there are some discrepancies between the studies that could have contributed to the different outcome. 
+Still, the marked difference in results of both studies is surprising: they are similar enough that the present study could be considered a direct replication [@Zwaan2018] of the first study [@London2021]. We used the exact same electrode montage and tDCS parameters, followed the same experimental design (Figure \@ref(fig:fig-procedure)), ran the experiment in the same location with the same participant population, and used a virtually identical task. Nevertheless, there are some discrepancies between the studies that could have contributed to the different outcome (see Table \@ref(tab:tab-diffs) for a full list of the differences). 
 
-The most important difference is that @London2021 presented T2 at lags 2, 4, and 10, whereas we used lags 3 and 8. This means that AB magnitude (the difference in T2|T1 accuracy between the shortest and longest lag) was on average smaller in the present study. We introduced the change for precisely this reason: to have about as many trials for the EEG analyses in which T2 was seen vs. missed, we needed the AB to be smaller. But this increase in average T2|T1 accuracy may have also reduced the between-subject variability that is essential for analyses that capitalize on individual differences. Indeed, from Figure \@ref(fig:fig-corr-pooled) it seems that the sample in @London2021 had a larger spread, at least in the change scores for AB magnitude.
+The most important difference is that in the previous study [@London2021], T2 was presented at lags 2, 4, and 10, whereas we now used lags 3 and 8. This means that AB magnitude (the difference in T2|T1 accuracy between the shortest and longest lag) was on average smaller in the present study. We introduced the change for precisely this reason: to have about as many trials for the EEG analyses in which T2 was seen vs. missed, we needed the AB to be smaller. But this increase in average T2|T1 accuracy may have also reduced the between-subject variability that is essential for analyses that capitalize on individual differences. Indeed, from Figure \@ref(fig:fig-corr-pooled) it seems that the previous sample [@London2021] had a larger spread, at least in the change scores for AB magnitude.
 
 Though the change in lags is probably the most important, the concurrent EEG measurement did introduce other differences as well. Each session took longer to complete, because the EEG setup required extra time, and the pace of the task was slowed down with longer inter-stimulus intervals. Finally, the current flow could have changed due to the presence of the EEG cap and electrodes, as well as the use of conductive paste instead of saline solution.
 
-At the group level, our results are in agreement with @London2021: we find no differential effects of anodal and cathodal tDCS on the AB. However, another study [@Sdoia2019] did report a group-level  effect of tDCS on the AB, but this study used different stimulation parameters and was fairly small (see @London2021 for a more extensive discussion of the differences). At least with our AB task and fairly standard electrode montage and stimulation parameters [@Santarnecchi2015], the AB does not appear to be very amenable to tDCS over the lDLPFC. Our null results are consistent with recent reviews and meta-analyses highlighting there is little evidence that prefrontal tDCS can be used to enhance cognition [@Medina2017]; or if so, that its effects on attention [@Reteig2017] and cognition more generally [@Tremblay2014a] are difficult to predict, rather small [@Dedoncker2016a], and restricted to a limited subset of outcome measures and stimulation parameters [@deBoer2021; @Imburgio2018].
+At the group level, our results are in agreement [@London2021]: we find no differential effects of anodal and cathodal tDCS on the AB. However, another study [@Sdoia2019] did report a group-level  effect of tDCS on the AB, but this study used different stimulation parameters and was fairly small (see our previous paper [@London2021] for a more extensive discussion of the differences). At least with our AB task and fairly standard electrode montage and stimulation parameters [@Santarnecchi2015], the AB does not appear to be very amenable to tDCS over the lDLPFC. Our null results are consistent with recent reviews and meta-analyses highlighting there is little evidence that prefrontal tDCS can be used to enhance cognition [@Medina2017]; or if so, that its effects on attention [@Reteig2017] and cognition more generally [@Tremblay2014a] are difficult to predict, rather small [@Dedoncker2016a], and restricted to a limited subset of outcome measures and stimulation parameters [@deBoer2021; @Imburgio2018].
 
-Interpreting null results is always difficult, especially in brain stimulation studies [@DeGraaf2018]. Ultimately, a myriad of possible underlying explanations may apply, most of which we have no direct access to. For one, we cannot be sure that the current density in the lDLPFC reached sufficient levels [@Kim2014; @Opitz2015] based on our montage alone. More precise targeting of the stimulation towards the lDPLFC [@Datta2009] and modeling of the current flow [@DeBerker2013; @Karabanov2019] could provide some more confidence. Still, it would be difficult to verify that anodal tDCS and cathodal tDCS indeed had an opposite effect on cortical excitability [@Bestmann2014; @Bestmann2017]. This assumption holds in many cases, and would provide a plausible explanation for the negative correlation in @London2021 [@Krause2014]. But ideally, it should be validated with direct measures of cortical excitability. Such measures are hard to obtain, although some recent studies suggest that combining tDCS with magnetic resonance spectroscopy can be used for this purpose [@Filmer2019; @Antonenko2019; @Talsma2018]. Combining tDCS with MRI may also help predict individual differences in stimulation efficacy. One recent study found that individual variability in the cortical thickness of left prefrontal cortex accounted for almost 35% of the variance in stimulation efficacy among subjects [@Filmer2019b].
+Interpreting null results is always difficult, especially in brain stimulation studies [@DeGraaf2018]. Ultimately, a myriad of possible underlying explanations may apply, most of which we have no direct access to. For one, we cannot be sure that the current density in the lDLPFC reached sufficient levels [@Kim2014; @Opitz2015] based on our montage alone. More precise targeting of the stimulation towards the lDPLFC [@Datta2009] and modeling of the current flow [@DeBerker2013; @Karabanov2019] could provide some more confidence. Still, it would be difficult to verify that anodal tDCS and cathodal tDCS indeed had an opposite effect on cortical excitability [@Bestmann2014; @Bestmann2017]. This assumption holds in many cases, and would provide a plausible explanation [@Krause2014] for the negative correlation we originally found [@London2021] . But ideally, it should be validated with direct measures of cortical excitability. Such measures are hard to obtain, although some recent studies suggest that combining tDCS with magnetic resonance spectroscopy can be used for this purpose [@Filmer2019; @Antonenko2019; @Talsma2018]. Combining tDCS with MRI may also help predict individual differences in stimulation efficacy. One recent study found that individual variability in the cortical thickness of left prefrontal cortex accounted for almost 35% of the variance in stimulation efficacy among subjects [@Filmer2019b].
 
 It is also possible that we do not find an effect because the studies did not have sufficient statistical power [@Minarik2016]. Especially for the individual differences analyses, the sample size in both studies is on the lower end. For example, to detect a medium-sized correlation (_r_ = 0.3) with 80% power, the required sample size is n = 84. We do approach this sample size when combining both studies (n = `r n_study1 + n_study2`). Also, the correlation in @London2021 was larger (_r_ = `r printnum(r_study1)`), but we cannot have much confidence in the precision of this estimate: : the 95% confidence interval is so wide (`r printnum(CIr(r_study1,n_study1_pc,.95)[1])` to `r printnum(CIr(r_study1,n_study1_pc,.95)[2])`) that it is consistent with a large range of effect sizes, and therefore almost unfalsifiable [@Morey2016]. To estimate the size of a medium correlation (_r_ = 0.3) within a narrower confidence band (± 0.15 with 90% confidence), a sample size of n = 134 would be required [@Schonbrodt2013]. Although our analyses suggest that the correlation is small if anything, this means we cannot accurately estimate how small---even with the combined sample.
 
@@ -750,8 +751,6 @@ r_refs(file = "r-references.bib", append = FALSE)
 \endgroup
 
 # Supplementary material {-}
-
-## tDCS adverse events {-}
 
 ```{r appendix, child = 'AB-tDCS_appendix.Rmd'}
 ``` 
